fix: 관리비 업데이트 api 수정
